--- a/Test_Git/.settings/org.eclipse.cdt.core.prefs
+++ b/Test_Git/.settings/org.eclipse.cdt.core.prefs
@@ -178,10 +178,10 @@ environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.DTS/value=3600
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.LOCAL/delimiter=;
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.LOCAL/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.LOCAL/value=1464173197
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.LOCAL/value=1464346364
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.UTC/delimiter=;
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.UTC/operation=replace
-environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.UTC/value=1464169597
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.UTC/value=1464342764
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.ZONE/delimiter=;
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.ZONE/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/A.EXTRA.TIME.ZONE/value=0
@@ -422,6 +422,15 @@ environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.D
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.DEBUG\ PORT/delimiter=;
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.DEBUG\ PORT/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.DEBUG\ PORT/value=
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.C.COMPILE/delimiter=;
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.C.COMPILE/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.C.COMPILE/value=
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.COMPILE/delimiter=;
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.COMPILE/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.COMPILE/value=
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.CPP.COMPILE/delimiter=;
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.CPP.COMPILE/operation=replace
+environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.EXTRA.CPP.COMPILE/value=
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.FLASH\ FREQUENCY/delimiter=;
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.FLASH\ FREQUENCY/operation=replace
 environment/project/it.baeyens.arduino.core.toolChain.release.358102209/JANTJE.FLASH\ FREQUENCY/value=
